Issue 22: Fix minor layout issue in pull quote block.

--- a/assets/src/css/components/_wp-block.scss
+++ b/assets/src/css/components/_wp-block.scss
@@ -166,6 +166,7 @@
 
 		&-pullquote {
 			@extend .wp-block-quote;
+			max-width: 100%;
 
 			@media ( query( min, tablet ) ) {
 				width: 320px;
